--- a/components/editor/editor.css
+++ b/components/editor/editor.css
@@ -1,5 +1,7 @@
 :root {
   --border-gray-100: rgb(243 244 246);
+  --border-gray-200: rgb(229 231 235);
+  --border-gray-300: rgb(209 213 219);
 }
 
 h1 {
@@ -24,7 +26,8 @@ blockquote {
   align-items: center;
   margin-left: 20px;
   padding-left: 20px;
-  border-left: 5px solid #ccc;
+  border-left: 5px solid var(--border-gray-300);
+  background-color: var(--border-gray-100);
   font-weight: bold;
 }
 
